Fix stupid gradle jvm args, or whatever was wrong. I'm so tired of this shit