@@ -4,13 +4,14 @@ plugins {
     id "com.diffplug.spotless" version "6.3.0"
 }
 
+var heapSize = ['-Xmx4g', '-Xms1g']
+
 application {
-    applicationDefaultJvmArgs = ['-Xmx4g',
-                                 '-Xms1g',
-                                 '--add-opens', 'javafx.graphics/com.sun.javafx.tk=jogamp.fat',
-                                 '--add-opens', 'javafx.graphics/javafx.stage=jogamp.fat',
-                                 '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=jogamp.fat',
-                                 '--add-opens', 'javafx.graphics/com.sun.glass.ui=jogamp.fat']
+    applicationDefaultJvmArgs = ['--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+                                 '--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED',
+                                 '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
+                                 '--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED']
+    applicationDefaultJvmArgs += heapSize
 }
 
 repositories {
@@ -67,6 +68,19 @@ tasks.withType(JavaCompile) {
 
 application {
     mainClass = 'application.Main'
+}
+
+tasks.withType(AbstractCompile) {
+    options.compilerArgs += ["--enable-preview", "--add-modules", "jdk.incubator.vector"]
+}
+
+tasks.withType(Test) {
+    jvmArgs += ["--enable-preview", "--add-modules", "jdk.incubator.vector"]
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += ["--enable-preview", "--add-modules", "jdk.incubator.vector"]
+    jvmArgs += heapSize
 }
 
 tasks.named('test') {
